--- a/package.json
+++ b/package.json
@@ -10,14 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-linear-gradient": "^2.7.3",
     "react-native-reanimated": "^3.3.0",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-safe-area-context": "^4.7.1",
+    "react-native-screens": "^3.22.1",
+    "react-native-svg": "^13.10.0",
+    "react-native-vector-icons": "^10.0.0",
+    "styled-components": "^6.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
