--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.22.1",
     "react-native-svg": "^13.10.0",
+    "react-native-tcp-socket": "^6.0.6",
+    "react-native-udp": "^4.1.7",
     "react-native-vector-icons": "^10.0.0",
     "styled-components": "^6.0.4"
   },
