--- a/package.json
+++ b/package.json
@@ -27,7 +27,24 @@
     "react-native-tcp-socket": "^6.0.6",
     "react-native-udp": "^4.1.7",
     "react-native-vector-icons": "^10.0.0",
-    "styled-components": "^6.0.4"
+    "styled-components": "^6.0.4",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native-stack": "^6.9.12",
+    "eslint-config-standard-react": "^13.0.0",
+    "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
+    "eslint-plugin-n": "^16.0.0",
+    "jest-jasmine2": "^29.5.0",
+    "postcss": "^8.4.23",
+    "prop-types": "^15.8.1",
+    "react-native-art": "^1.0.0",
+    "react-native-get-random-values": "^1.9.0",
+    "react-native-navigation-bar-color": "^2.0.2",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
+    "styled-tools": "^1.7.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -44,7 +61,20 @@
     "metro-react-native-babel-preset": "0.76.7",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "@commitlint/cli": "^17.6.3",
+    "@commitlint/config-conventional": "^17.6.3",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "@types/jest": "^29.5.1",
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-standard": "^5.0.0",
+    "lint-staged": "^13.2.2"
   },
   "engines": {
     "node": ">=16"
