--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "react-native-animatable": "^1.3.3",
     "react-native-art": "^1.0.0",
     "react-native-base64": "^0.2.1",
+    "react-native-ble-manager": "^11.1.0",
     "react-native-ble-plx": "^3.1.2",
+    "react-native-bluetooth-status": "^1.5.1",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-get-random-values": "^1.9.0",
     "react-native-linear-gradient": "^2.7.3",
