--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-get-random-values": "^1.9.0",
     "react-native-linear-gradient": "^2.7.3",
     "react-native-navigation-bar-color": "^2.0.2",
+    "react-native-network-info": "^5.2.1",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.22.1",
