--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
-    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.8",
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.17",
+    "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.5",
     "babel-plugin-dotenv": "^0.1.1",
     "eslint-config-standard-react": "^13.0.0",
@@ -50,6 +51,9 @@
     "react-native-vector-icons": "^10.0.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
+    "react-redux": "^9.1.1",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.0.4",
     "styled-tools": "^1.7.2",
     "uuid": "^9.0.0"
