--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/audio-toolkit": "^2.0.3",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.8",
@@ -33,10 +34,12 @@
     "react-native": "0.72.3",
     "react-native-animatable": "^1.3.3",
     "react-native-art": "^1.0.0",
+    "react-native-audio-record": "^0.2.2",
     "react-native-base64": "^0.2.1",
     "react-native-ble-manager": "^11.1.0",
     "react-native-ble-plx": "^3.1.2",
     "react-native-bluetooth-status": "^1.5.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-get-random-values": "^1.9.0",
     "react-native-linear-gradient": "^2.7.3",
