--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/audio-toolkit": "^2.0.3",
     "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-community/datetimepicker": "^8.1.1",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.7.7",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
@@ -45,6 +47,8 @@
     "react-native-linear-gradient": "^2.7.3",
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-network-info": "^5.2.1",
+    "react-native-paper": "^5.12.3",
+    "react-native-radio-buttons-group": "^3.1.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.22.1",
@@ -52,6 +56,7 @@
     "react-native-tcp-socket": "^6.0.6",
     "react-native-udp": "^4.1.7",
     "react-native-vector-icons": "^10.0.0",
+    "react-native-wheel-picker-android": "^2.0.6",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^9.1.1",
