--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^2.2.3",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.6.5",
     "babel-plugin-dotenv": "^0.1.1",
     "eslint-config-standard-react": "^13.0.0",
@@ -60,6 +62,7 @@
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^9.1.1",
+    "react_native_mqtt": "^1.3.1",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.0.4",
